name:                stb-image
version:             0.1.0.0
synopsis:            Image loading and writing library based on stb_image and std_image_write
description:         Please see README.md
homepage:            https://github.com/sasinestro/stb-image#readme
license:             BSD3
license-file:        LICENSE
author:              Alexis Williams
maintainer:          sasinestro@gmail.com
copyright:           Copyright: (c) 2016 Alexis Williams
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , inline-c
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sasinestro/stb-image
